--- a/hw4/Shipment_ML/DAL/DAL.csproj
+++ b/hw4/Shipment_ML/DAL/DAL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementations\Repository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="SqlExpressionProviders\Implementations\SqlExpressionProvider.cs" />
+    <Compile Include="SqlExpressionProviders\Interfaces\ISqlExpressionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
@@ -52,9 +54,6 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExpressionBuilders\Implementations\" />
-    <Folder Include="ExpressionBuilders\Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
