--- a/hw4/Shipment_ML/Core/Core.csproj
+++ b/hw4/Shipment_ML/Core/Core.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\Cargo.cs" />
+    <Compile Include="Entities\Route.cs" />
+    <Compile Include="Entities\Warehouse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
