Added store-wins strategy to ef uow.

--- a/hw6/Shipment_ML/Tests/Tests.csproj
+++ b/hw6/Shipment_ML/Tests/Tests.csproj
@@ -70,8 +70,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAL\UnitOfWorkTests.cs" />
-    <Compile Include="Performance\UnitOfWorkTests.cs" />
+    <Compile Include="DAL\ConnectedRepositoryTests.cs" />
+    <Compile Include="DAL\EfUnitOfWorkTests.cs" />
+    <Compile Include="Performance\RepositoriesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
